cloudformation/infrastructure.yml
# ライブコーディング用のCloudFormationテンプレート
# create stack: aws cloudformation create-stack --stack-name ForLive --template-body file://`pwd`/service/sample.cfn.yml
# update stack: aws cloudformation update-stack --stack-name ForLive --template-body file://`pwd`/service/sample.cfn.yml
# delete stack: aws cloudformation delete-stack --stack-name ForLive

AWSTemplateFormatVersion: "2010-09-09"
Description: "infrastructure for live coding"

# ---------------
# Parameters定義
# ---------------
Parameters:
  VpcCIDR:
    Description: IP range for VPC
    Type: String
    Default: 10.0.0.0/20
  PublicSubnet1aCIDR:
    Description: IP range for PublicSubnet1a
    Type: String
    Default: 10.0.0.0/24
  AllCIDR:
    Description: IP range for all
    Type: String
    Default: 0.0.0.0/0
  CommonName:
    Description: common name
    Type: String
    Default: ForLive

# ---------------
# Resources定義
# ---------------
Resources:
  # VPC定義
  VpcForLive:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: VpcForLive

  # インターネットゲートウェイ定義
  InternetGatewayForLive:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: InternetGatewayForLive

  # インターネットゲートウェイ-VPC関連付け定義
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGatewayForLive
      VpcId: !Ref VpcForLive

  # パブリックサブネット定義
  PublicSubnetForLive:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      CidrBlock: !Ref PublicSubnet1aCIDR
      VpcId: !Ref VpcForLive
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PublicSubnetForLive

  # セキュリティグループ定義
  SecurityGroupForLive:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroupForLive
      GroupName: SecurityGroupForLive
      SecurityGroupIngress:
        - CidrIp: !Ref AllCIDR
          Description: inbound for ssh
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref AllCIDR
          Description: inbound for http
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: !Ref AllCIDR
          Description: inbound for http
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
      SecurityGroupEgress:
        - CidrIp: !Ref AllCIDR
          Description: outbound for all
          FromPort: -1
          IpProtocol: -1
          ToPort: -1
      VpcId: !Ref VpcForLive
      Tags:
        - Key: Name
          Value: SecurityGroupForLive

  # ルートテーブル定義
  PublicRouteTableForLive:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcForLive
      Tags:
        - Key: Name
          Value: PublicRouteTableForLive
  DefaultPublicRouteTableForLive:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTableForLive
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayForLive
  PublicSubnet1RouteTableAssociationForLive:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTableForLive
      SubnetId: !Ref PublicSubnetForLive

  # EIP定義
  # 参照：/Users/yuto_nakanishi/work/CloudFormation/service/VPC/only_vpc.yml

  #EIP-EC2関連定義
  EIPToEC2ForLive:
    Type: AWS::EC2::EIPAssociation
    Properties:
      EIP: !ImportValue OutputEIP
      InstanceId: !Ref EC2ForLive

  # EC2インスタンス定義
  EC2ForLive:
    Type: AWS::EC2::Instance
    Properties:
      DisableApiTermination: false
      ImageId: ami-01748a72bed07727c
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: t2.micro
      KeyName: raisetech-key
      Monitoring: false
      SecurityGroupIds:
        - !Ref SecurityGroupForLive
      SourceDestCheck: true
      SubnetId: !Ref PublicSubnetForLive
      Tags:
        - Key: Name
          Value: !Sub "EC2${CommonName}"
      Tenancy: default
